--- a/app/src/main/res/layout/content_areas.xml
+++ b/app/src/main/res/layout/content_areas.xml
@@ -8,9 +8,14 @@
     tools:context="scan.lucas.com.contadeluz.AreasActivity"
     tools:showIn="@layout/activity_areas">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvAllAreas"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
 
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvAllAreas"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </android.support.v4.widget.SwipeRefreshLayout>
 </android.support.constraint.ConstraintLayout>
