--- a/app/src/main/res/layout/activity_area_consumo.xml
+++ b/app/src/main/res/layout/activity_area_consumo.xml
@@ -28,8 +28,7 @@
         <include
             layout="@layout/content_area_consumo"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="60dp" />
+            android:layout_height="wrap_content" />
 
     </android.support.v4.widget.NestedScrollView>
 
