--- a/app/src/main/res/layout/areas_card.xml
+++ b/app/src/main/res/layout/areas_card.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="16dp"
@@ -18,17 +19,19 @@
 
             <TextView
                 android:id="@+id/nome"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
+                android:layout_width="match_parent"
+                android:textAlignment="textStart"
+                android:layout_height="30dp"
                 android:text="AAAA"
+                android:textSize="20sp"
 
                 />
 
             <TextView
                 android:id="@+id/qntAparelhos"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:textAlignment="textEnd"
+                android:layout_height="30dp"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentTop="true"
                 android:text="Aparelhos: 10"
@@ -57,8 +60,8 @@
                 android:id="@+id/cofis"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/pis"
                 android:layout_alignBottom="@+id/kwh"
+                android:layout_toEndOf="@+id/pis"
                 android:padding="5dp"
                 android:text="Cofis: 10" />
 
@@ -72,33 +75,35 @@
                 android:text="Adicional: 10" />
 
             <TextView
-                android:id="@+id/valor"
+                android:id="@+id/consumoMensao"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignBaseline="@+id/consumoDiario"
+                android:layout_alignBottom="@+id/consumoDiario"
+                android:layout_toEndOf="@+id/consumoDiario"
                 android:padding="5dp"
-                android:layout_alignParentEnd="true"
-                android:layout_below="@+id/qntAparelhos"
-                android:text="Valor Mensal R$: 10" />
+                android:text="C. Mes: 10" />
 
             <TextView
                 android:id="@+id/consumoDiario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/add"
-                android:layout_alignBottom="@+id/add"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/add"
                 android:padding="5dp"
                 android:text="C. Diario: 10" />
+
             <TextView
-                android:id="@+id/consumoMensao"
+                android:id="@+id/valor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toEndOf="@+id/consumoDiario"
-                android:layout_alignBottom="@+id/add"
+                android:layout_alignParentStart="true"
+                android:layout_below="@id/consumoDiario"
                 android:padding="5dp"
-                android:text="C. Mes: 10" />
+                android:text="Valor Mensal R$: 10" />
 
 
-</RelativeLayout>
+        </RelativeLayout>
 
     </android.support.v7.widget.CardView>
 
