--- a/app/src/main/res/layout/content_aparelhos_activity.xml
+++ b/app/src/main/res/layout/content_aparelhos_activity.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="scan.lucas.com.contadeluz.AreasActivity"
-    tools:showIn="@layout/activity_areas">
+    tools:context="scan.lucas.com.contadeluz.AparelhosActivity"
+    tools:showIn="@layout/activity_aparelhos">
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
@@ -14,8 +14,9 @@
         android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rvAllAreas"
+            android:id="@+id/rvAllAparelhos"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
     </android.support.v4.widget.SwipeRefreshLayout>
 </android.support.constraint.ConstraintLayout>
