--- a/app/src/main/res/layout/content_aparelho_activity.xml
+++ b/app/src/main/res/layout/content_aparelho_activity.xml
@@ -7,8 +7,6 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="scan.lucas.com.contadeluz.AparelhoActivity"
     tools:showIn="@layout/activity_aparelho">
-
-
     <android.support.design.widget.TextInputLayout
         android:id="@+id/Nome"
         android:layout_width="match_parent"
@@ -63,13 +61,10 @@
         android:id="@+id/btnSalvar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/ddlVoltagem"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:text="Salvar"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:text="Salvar" />
-
-
-
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ddlVoltagem" />
 </android.support.constraint.ConstraintLayout>
