--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,13 +6,13 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_aparelhos"
-
+            android:icon="@drawable/ic_menu_share"
             android:title="Aparelhos" />
         <item
             android:id="@+id/nav_areas"
             android:icon="@mipmap/ic_queue_black_24dp"
             android:title="Areas Consumo" />
-        <item
+        <!--<item
             android:id="@+id/nav_camera"
             android:icon="@drawable/ic_menu_camera"
             android:title="Import" />
@@ -27,19 +27,19 @@
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="Tools" />-->
     </group>
 
     <item android:title="Communicate">
         <menu>
-            <item
+            <!--<item
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
+                android:title="Share" />-->
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_sair"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="Sair" />
         </menu>
     </item>
 
